{
    "name": "Input Actions",
    "maps": [
        {
            "name": "Player",
            "id": "c3d419fb-b741-4729-908d-846e10c9e847",
            "actions": [
                {
                    "name": "Switch_Camera",
                    "type": "Button",
                    "id": "2ad64726-5a5a-42ba-ae68-4148c81d0834",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseMovement",
                    "type": "PassThrough",
                    "id": "1b81fc8f-c8eb-43fc-afd1-543535e05060",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AnyKey",
                    "type": "Button",
                    "id": "722ab97c-984b-4843-9837-677cbeb85986",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Steering",
                    "type": "Value",
                    "id": "3d5de571-27fc-40ae-a027-e0701f45c0b7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6f906423-8aae-46aa-ac86-eb65732096bb",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch_Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be692f9e-0cb5-43a7-8986-f4c2fdd5295a",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb331f6c-9607-44a5-9428-e32e3cf3fb0a",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "7bb7830f-71e8-4eea-aafd-215aa3c869c8",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9cdaf567-fc90-45c5-ac71-6f420d4a814e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9ee9befe-71b1-4896-b4f8-62d0a889d7fa",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "13429733-9003-4139-b0b9-013db998b2d5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8d2726bb-7f78-421b-9df5-c593e602a46f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Menu",
            "id": "8784c952-a748-4ebb-8dbb-2d28481d1a7d",
            "actions": [
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "1f7b177e-39fd-4713-b003-c711c719e4b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9cf58845-dee3-40eb-b154-09ada32418da",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}